qp-gateway/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: app-gateway-ingress
  namespace: test
spec:
  backend:
    serviceName: default-http-backend
    servicePort: 80
  rules:
  - host: api.sihai.com                           ##虚拟主机名称
    http:
      paths:
      - path: /
        backend:
          serviceName: app-gateway
          servicePort: 8081
